--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.56.2",
+    "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.11.0",
     "next": "^14.2.13",
     "react": "^18",
@@ -17,6 +18,7 @@
   },
   "devDependencies": {
     "@tanstack/eslint-plugin-query": "^5.56.1",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
